scrollbar fix + animation

--- a/Website/css/chatwindow.css
+++ b/Website/css/chatwindow.css
@@ -22,8 +22,8 @@
 .chat-popup {
     display: none;
     position: fixed;
-    bottom: 15px;
-    right: 15px;
+    bottom: 1px;
+    right: 1px;
     border: 3px solid #f1f1f1;
     z-index: 9;
     background-color: #DBDBDB;
@@ -116,4 +116,22 @@
 .profile {
     margin-left: 1px;
     padding-left: 0px;
+}
+
+.fadein {
+    animation: fadeIn ease 3s;
+    -webkit-animation: fadeIn ease 3s;
+    -moz-animation: fadeIn ease 3s;
+    -o-animation: fadeIn ease 3s;
+    -ms-animation: fadeIn ease 3s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
